feat: Implement class bonuses